# snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  main.js  style.css
examples/: dhcr.json  fixed.json  zig-zag-cut.json  zig-zag.json
src/: agent.hpp  cell_tree_agent.hpp  game.hpp  game_util.hpp  hamiltonian_cycle.hpp  random.cpp  random.hpp  shortest_path.hpp  snake.cpp  util.hpp  zig_zag_agent.hpp
visualize/: index.html  main.js  style.css
visualize/examples/: cell.json  dhcr.json  fixed.json  phc.json  zig-zag-cut.json
